# meepo

./: .gitignore  go.work
.github/workflows/: go-test.yml  py-test.yml
bot/: Dockerfile  config.yaml  pyproject.toml  requirements.txt
bot/src/bot/: config.py  models.py  server.py
bot/src/bot/livekit_streamer/: lk_streamer.py
bot/src/bot/pb/: __init__.pyi  bot_pb2.py  bot_pb2.pyi  bot_pb2_grpc.py
bot/src/bot/selenium_bot/: google_meets.py
bot/tests/: conftests.py  test_google_meets.py  test_livekit_streamer.py  test_server.py
gateway/: go.mod  go.sum
gateway/internal/grpc/: bot.go  bot_test.go
gateway/internal/grpc/pb/: bot.pb.go  bot_grpc.pb.go
protos/: bot.proto
transcription/: pyproject.toml
transcription/src/transcription/: livekit_receiver.py  transcriber.py
transcription/tests/: test_transcriber.py
