[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.76.0",
    "livekit>=1.0.17",
    "livekit-api>=1.0.7",
    "numpy>=2.3.4",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
